--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.12",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.23.0",
     "final-form": "^4.20.4",
     "react": "^17.0.2",
@@ -20,6 +24,7 @@
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.4.0",
     "reselect": "^4.1.4",
+    "typescript": "^4.5.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -49,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^3.2.3"
   }
 }
