--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux-form": "^8.3.3",
     "axios": "^0.23.0",
     "final-form": "^4.20.4",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.7",
