--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.23.0",
     "final-form": "^4.20.4",
     "formik": "^2.2.9",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.7",
