--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/redux-form": "^8.3.3",
     "axios": "^0.23.0",
+    "express": "^4.17.3",
     "final-form": "^4.20.4",
     "formik": "^2.2.9",
     "query-string": "^7.1.1",
@@ -33,6 +34,7 @@
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.4.0",
     "reselect": "^4.1.4",
+    "socket.io": "^4.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^1.1.2"
   },
