--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "reselect": "^4.1.4",
     "socket.io": "^4.4.1",
     "typescript": "^4.5.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
